# rusty_pipe_server_flutter

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/co/deepraven/rusty_pipe_server_flutter/: RustyPipeServerFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/co/deepraven/rusty_pipe_server_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: rusty_pipe_server_flutter.podspec
ios/Classes/: RustyPipeServerFlutterPlugin.h  RustyPipeServerFlutterPlugin.m  SwiftRustyPipeServerFlutterPlugin.swift
lib/: rusty_pipe_server_flutter.dart
rust/: Cargo.toml
rust/src/: lib.rs
test/: rusty_pipe_server_flutter_test.dart
